# zero_zero_examples

./: .gitignore  CMakeLists.txt  README.md  log.txt  savegame.save
cmake/: libraries.cmake  shaders.cmake  std.cmake
res/models/: capsule.blend  capsule.glb  crate.json  crates.blend  crates.glb  floor.blend  floor.glb  free_simple_cartoon_platformer_pack.glb  interior_station_pack.json  level_1.blend  level_1.glb  playground.zres  playground.zscene  rocks.blend  rocks.glb  rocks_set.blend  rocks_set.glb
res/scenes/: crate.json  crates.json  level_1.json  rocks.json  scene1.json  scene2.json  scene3.json
res/scenes/level_1/: level_1.json  level_1_1.json
src/: add_remove_child.cpp  add_remove_child.h  crate.cpp  crate.h  example.cpp  example.cppm  example.h  includes.h  layers.cppm  layers.h  libraries.h  main.cpp  physics.cpp  physics.h  player.cpp  player.h  raycast.cpp  raycast.h  terrain.cpp  topbar.cpp  topbar.cppm  topbar.h  triangle.cpp  triangle.h  ui.cpp  ui.h
src/nodes/: crate.cpp  crate.cppm  crate.h  platform_player.cppm  player.cpp  player.cppm  player.h  terrain.cpp  terrain.cppm  terrain.h
src/scenes/: add_remove_child.cpp  add_remove_child.cppm  add_remove_child.h  example.cpp  example.cppm  physics.cpp  physics.cppm  physics.h  platforms.cpp  platforms.cppm  terrain.cpp  terrain.cppm  terrain.h  triangle.cpp  triangle.cppm  ui.h
src/shaders/: scale.vert  uv_gradient.frag
src/space_station/: game.cppm
src/space_station/nodes/: doors.cpp  doors.cppm  interactions.cpp  interactions.cppm  level.cpp  level.cppm  player.cpp  player.cppm
src/space_station/scenes/: main.cpp  main.cppm
src/space_station/states/: game_state.cpp  game_state.cppm  state.cpp  state.cppm
src/ui/: topbar.cpp  topbar.cppm
src/z0/: raycast.cpp  raycast.h
